@@ -46,7 +46,7 @@ void print_databases(string db_location) {
 
 int main(int argc, char **argv) { 
   if(argc != 2) {
-    cout << "usage: ./" << argv[0] << " <sqlite database location>";
+    cout << "usage: " << argv[0] << " <sqlite database location>\n";
     return -1;
   }
   if(access(argv[1], 0) == -1) {
